--- a/contact.html
+++ b/contact.html
@@ -59,30 +59,48 @@
     </div>
     </nav>
 <!-- Navbar part End -->
-<!-- Contact Part Start -->
 <section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10">
-
-            </div>
-        </div>
-    </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-8 m-auto">
+              <div class="about-header text-center">
+                  <h2>Get In Touch</h2>
+                  <h3>Contact Me</h3>
+              </div>
+          </div> 
+      </div>
+      <div class="contact-wrapper">
+          <div class="row">
+                  <div class="col-lg-10 m-auto">
+                      <div class="contact-from-wrap">
+                          <div class="row">
+                              <div class="col-lg-12">
+                                  <div class="f-name">
+                                      <form action="#" method="post">
+                                          <input type="name" placeholder="Your Name...." required>
+                                      </form>
+                                  </div>
+                                  <div class="f-name">
+                                      <form action="#" method="post">
+                                          <input type="email" placeholder="Your Email...." required>
+                                      </form>
+                                  </div>
+                                  <div class="message-box">
+                                   <textarea id="message" placeholder="Your Message....." name="message" required></textarea>
+                                  </div>
+                                  <div class="submit-btn">
+                                      <button class="btn" type="submit" class="submit-btn">Send Message</button>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
-<!-- Contact Part End -->
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- Contact End -->
 <!-- Footer part Start -->
 <footer id="footer">
   <div class="container">
